DOMjudge Programming Contest Judging System

Version 3.2.1 - SVN
-------------------

Version 3.2.0 - 11 October 2011
-------------------------------
 - Fix displaying scorerow on teampage also for invisible teams.
 - Examples suggest secure LDAPS protocol instead of LDAP.
 - Fix bug with language extension in uploading problem zipfiles.
 - Warn to recalculate scoreboard cache after contesttime changes.
 - Add icon for scoreboard filter.
 - Use POSIX compliant cp option -P instead of -d in judgedaemon.
 - Remove teampicture from jury teampage.
 - Only display scoreboard filter options if there's something to
   choose.
 - Various documentation improvements.

Version 3.2.0RC1 - 27 August 2011
---------------------------------
 - Add better support for interactive problems, add sample problem.
 - New, redesigned single page "dashboard" team web interface.
 - Change execute() function for more flexible I/O redirection.
 - Add runpipe program for connecting stdin/out of two processes.
 - Rename compare_program.sh to *_wrapper, allow symlinked usage.
 - Add FLOAT command and exponentiation to checktestdata program.
 - Add countdown before contest and timezone to clock.
 - Add daemon support in C/PHP libraries, use for submit/judgedaemon.
 - Add category to balloons list and button to view only unsent.
 - Lots of small changes to C/C++ sources and build system for better
   POSIX compliance and portability; support LLVM clang compiler.
 - Replace bash by POSIX shell in compile, testcase_run. (Closes: #1735673)
 - Create separate execdir subdir for judging. (Closes: #3041492)
 - Replace setuid root installation of runguard with invocation
   via sudo.
 - Fix missing permissions for plugin interface SQL user.
 - Remove CHROOTDIR (mountpoint prefix) variable to avoid confusion
   with the directory where the Java chroot was created.
 - Redirect to submissions overview page after verification.
 - Fix information leak in clarification problems list. (Closes: #3096018)