@@ -2,6 +2,8 @@ DOMjudge Programming Contest Judging System
 
 Version 3.2.1 - SVN
 -------------------
+ - Update M4 macro's from upstream. Note that this fixes problems
+   only occurring in development/maintainer context.
 
 Version 3.2.0 - 11 October 2011
 -------------------------------
